<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/_clear"
                app:backgroundTint="@color/button_operation_color"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_root"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_operation_color"
                android:text="@string/_sqrt"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pow"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_operation_color"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                android:text="@string/_pow"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_operation_color"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                android:text="@string/_plus"
                android:textSize="@dimen/button_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seven"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_7"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eight"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_8"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_nine"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_9"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_operation_color"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                android:text="@string/_minus"
                android:textSize="@dimen/button_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_four"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_4"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_5"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_6"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                android:text="@string/_mul"
                android:textSize="@dimen/button_text_size"
                app:backgroundTint="@color/button_operation_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_one"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_1"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_two"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_2"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_three"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_3"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                app:backgroundTint="@color/button_operation_color"
                android:text="@string/_div"
                android:textSize="@dimen/button_text_size" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_dot"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zero"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_0"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                app:backgroundTint="@color/button_number_color"
                android:text="@string/_equals"
                android:textSize="@dimen/button_text_size"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_mod"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:paddingStart="@dimen/operator_padding_start"
                android:paddingEnd="@dimen/operator_padding_end"
                app:backgroundTint="@color/button_operation_color"
                android:text="@string/_mod"
                android:textSize="@dimen/button_text_size" />
        </TableRow>
    </TableLayout>

</FrameLayout>
